security portion initialized